--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
             const app = h('h1', null, 'Hello World!');
           
             render(app, document.body);
+            <Shell
+        fs={fs}
+         startMenu={startMenu}
+        desktopIcons={desktopIcons}
+        apps={apps}
+        ref={shell => (this.shell = shell)}
+        site={site}
+        />
           </script>
     </head>
 </html>
